--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li>Page 2</li>
-                <li>Page 3</li>
+                 <li><a href = "index.html">Home</a></li>
+                <li><a href = "FirstGen.html">First Gen</a></li>
+                <li><a href = "FoodPantry.html">Food Pantry</a></li>
+                <li><a href = "CAPS.html">CAPS</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
