--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <title>Student Success Portal</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href ="#main-content">Skip to Main Content</a>
     <header>
         <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
-                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "FirstGen.html">First Gen</a></li>
-                <li><a href = "FoodPantry.html">Food Pantry</a></li>
-                <li><a href = "CAPS.html">CAPS</a></li>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "FirstGen.html">First-Generation Students</a></li>
+                <li><a href = "FoodPantry.html">Student Food Cupboard</a></li>
+                <li><a href = "CEW+.html">Center For The Education of Women</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
-
     </header>
-    <main>
+    <main id="main-content">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
@@ -52,8 +51,7 @@
                 </figure>
                 <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
             </article>
-        </section>
-        
+        </section>     
         <section>
             <h2>Mental Health</h2>
             <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
@@ -77,8 +75,6 @@
                 <p> Join peer support groups for shared experiences and collective coping strategies.</p>
             </article>
         </section>
-
-        
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
@@ -93,8 +89,6 @@
                 <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
             </ul>
         </section>
-        <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
-        UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
     </main>
     <footer>
         <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
