--- a/index.html
+++ b/index.html
@@ -3,81 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Success Portal</title>
+    <title>Welcome to Michigan</title>
 </head>
 <body>
     <a href ="#main-content">Skip to Main Content</a>
     <header>
-        <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <img src="/images/u-m_logo-hex-withoutline.png" alt="Michigan Logo">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "FirstGen.html">First-Generation Students</a></li>
-                <li><a href = "FoodPantry.html">Student Food Cupboard</a></li>
-                <li><a href = "CEW+.html">Center For The Education of Women</a></li>
+                <li><a href = "firstgen.html">First-Generation Students</a></li>
+                <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
+                <li><a href = "cew.html">Center For The Education of Women</a></li>
             </ul>
         </nav>
-        <h1>Student Success Portal</h1>
     </header>
+
+
     <main id="main-content">
+        <h1>Welcome to the University of Michigan</h1>
+        <p>Welcome to the University of Michigan! Discover what makes our university a place where people come to grow, learn, and lead the future.</p>
+        <figure>
+            <img src="/images/UMSI_MichiganUnion_Reopening_18.jpg" alt="The University of Michigan Student Union">
+            <figcaption>Welcome to the University of Michigan where everyone is welcomed!</figcaption>
+        </figure>
         <section>
-            <h2>Welcome to the UM Grad Success Navigator</h2>
-            <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
-            <p>This guide is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
-            <ol>
-                <li>Academic Resources</li>
-                <li>Physical Health</li>
-                <li>Mental Health</li>
-                <li>Life Outside Classroom</li>
-                <li>Contact</li>
-            </ol>
+            <h2>Who is the Maize & Blue?</h2>
+            <p>The University of Michigan is a world-class institution renowned for its academic excellence, vibrant campus life, and cutting-edge research. Founded in 1817, U-M is dedicated to creating a diverse, inclusive, and transformative educational experience.</p>
+            <h3><strong>Quick Facts:</strong></h3>
+            <ul>
+                <li>Student Population: 46,000+</li>
+                <li>Faculty: 6,200+</li>
+                <li>Programs: 275+ degreee programs across 19 schools and colleges</li>
+            </ul>
         </section>
+
+
         <section>
-            <h2>Physical Health</h2>
-            <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
+            <h2>Why Michigan?</h2>
             <article>
-                <h3>University Health Service (UHS)</h3>
-                <figure>
-                    <img src="/images/UHS.jpg" alt="University Health Services building">
-                    <figcaption>University Health Services Building</figcaption>
-                </figure>
-                <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>
+                <h3>Academics</h3>
+                <p>Ranked among the top universities globally, U-M offers rigorous and innovative academic programs.</p>
             </article>
             <article>
-                <h3>Recreational Sports</h3>
-                <figure>
-                    <img src="/images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
-                    <figcaption>UMSI out in the fall!</figcaption>
-                </figure>
-                <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
+                <h3>Campus life</h3>
+                <p>Enjoy a dynamic student life with 1,600+ student organizations, Big Ten athletics, and a vibrant arts and culture scene."</p>
+            </article>
+            <article>
+                <h3>Research</h3>
+                <p>Join a thriving research community making groundbreaking discoveries across disciplines</p>
             </article>
         </section>     
+
+
         <section>
-            <h2>Mental Health</h2>
-            <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
-            <article>
-                <h3>Counseling and Psychological Services (CAPS):</h3>
-                <p> Access individual counseling, group therapy, workshops, and crisis intervention services.</p>
-            </article>
-            <article>
-                <h3>Wellness Coaching:</h3>
+            <h2>Testimonials</h2>
+                <p>"The University of Michigan has provided me with unparalleled opportunities and a supportive community."</p> 
+             <h3>— Jamie, Class of '23</h3>
 
-                <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
-            </article>
-            <article>
-                <h3>Mindfulness Resources:</h3>
+                <p>"My time at U-M was transformative. The experiences and connections I made here set the foundation for my career success."</p>
+            <h3>— Alex, Class of '15</h3>
+           </section>
 
-                <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
-            </article>
-            <article>
-                <h3>Support Groups:</h3>
 
-                <p> Join peer support groups for shared experiences and collective coping strategies.</p>
-            </article>
-        </section>
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
-            <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
+            <p>There are many ways to take advantage of what this university has to offer. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside of academics:</p>
             <article>
 
             </article>
@@ -91,7 +82,10 @@
         </section>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+       <p>University Contact Information:
+         Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
+        <p>Phone: (734) 764-1817</p>
+        <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
         </footer>
 </body>
 </html>
