--- a/firstgen.html
+++ b/firstgen.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/reset.css"> 
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Guide for First Gens Wolverines</title>
 </head>
 
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    <a class="skip" href="#main-content">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "firstgen.html">First-Generation Students</a></li>
+                <li class="active"><a href = "firstgen.html">First-Generation Students</a></li>
                 <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
                 <li><a href = "cew.html">Center For The Education of Women</a></li>
             </ul>
         </nav>
-        <h1>A Guide for First Gen Wolverines</h1>
  </header>
 
-<main id="main-content">
+ <h1>A Guide for First Gen Wolverines</h1>
+
+<main class="main" id="main-content">
     <h2>Welcome First Generation Master's Students!</h2>
     <p>Welcome to the University of Michigan! Now that you've made it here, we hope you stay! As a first-generation Master's student, you're embarking on a transformative journey. You may face unique challenges and daunting experiences, but do not fret, you are not alone. There are many resources the University has to help navigate your time in grad school successfully.</p>
 
-    <section>
+    <section class="content-one">
         <h2>First Gen Student Stories</h2>
         <h3>Tiana R., School of Literature, Science and the Arts</h3>
         <p>"Being a first-gen Master's student was extremely uncomfortable at first. So I started getting involved in a lot First-Gen events and quickly realized there are other people just like me. Getting invloved with the community and utilizing the resources provided made it easier to navigate my academic journey. Now, I don't feel so uncomfortable!" </p>
@@ -42,7 +45,7 @@
         <figcaption> Academic Success for Everyone!</figcaption>
     </figure>
             
-    <section>
+    <section class="content-two">
         <h2>Academic Success</h2>
         <p>There are many resources for first-gen students to ensure academic success.</p>
         <ul>
@@ -52,21 +55,18 @@
         </ul>
     </section>
 
-    <section>
+    <section class="content-three">
         <h2>Join First-Gen for Weekly Events!</h2>
         <p> University of Michigan holds many weekly events for ALL first-gen students meant to connect with peers, gain valuable insights, and build a supportive community. These events will take place at a variety of times and in every corner of the campus so be sure to stay up to date with the calendar so you don't miss out!</p>
         <a href="https://firstgen.umich.edu/events/#events">Event Calendar</a>
-
-
     </section>
     
     </main>
     <footer>
-        <p><a href="firstgeninfo@umich.edu"> First Generation Contact Email</a></p>
-        <p> Address: | 3009 Student Activities Building
-            515 E. Jefferson
-            Ann Arbor, MI 48109 </p>
-        <p> Phone Number: (734) 936-1055</p>
+        <p>University Contact Information:
+            Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
+           <p>Phone: (734) 764-1817</p>
+           <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
     </footer>    
 </body>
 </html>
