--- a/foodpantry.html
+++ b/foodpantry.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/reset.css"> 
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Pantry for Students</title>
 </head>
 <body>
-    <a href ="#main-content">Skip to Main Content</a>
+    <a class="skip" href="#main-content">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "firstgen.html">First-Generation Students</a></li>
-                <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
+                <li class="active"><a href = "foodpantry.html">Student Food Cupboard</a></li>
                 <li><a href = "cew.html">Center For The Education of Women</a></li>
             </ul>
         </nav>
-        <h1>University of Michigan Food Pantry</h1>
     </header>
 
-        <main id="main-content">
+    <h1>University of Michigan Food Pantry</h1>
+            <p>The University of Michigan Food Pantry is dedicated to supporting students, faculty, and staff who are experiencing food insecurity. Our mission is to ensure that every member of the U-M community has access to nutritious food, essential supplies, and resources to help them thrive academically and personally.</p>
             <figure>
                 <img src="/images/MCOMMONS DSC03396.jpg" alt="Student Getting Food">
         <figcaption>A student holding a dessert.</figcaption>
             </figure>
         <h2><strong>Supporting Our Community One Meal at a Time at the Maize & Blue Cupboard</strong></h2>
-        <p>The University of Michigan Food Pantry is dedicated to supporting students, faculty, and staff who are experiencing food insecurity. Our mission is to ensure that every member of the U-M community has access to nutritious food, essential supplies, and resources to help them thrive academically and personally.</p>
 
-        <section>
+    <main class="main" id="main-content">
+        <section class="content-one">
         <h2>Here's How It Works:</h2>
         <ol>
             <li><strong>Make an appointment:</strong> Shopping at the Maize and Blue Cupboard is by appointment only. You can <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">sign up</a> for a visit two weeks in advance.</li>
@@ -36,7 +38,7 @@
         </ol>
     </section>
 
-    <section>
+    <section class="content-two">
         <h2>Frequently Asked Questions (FAQs)</h2>
         <h3>Who can use the food pantry?</h3>
         <p>The food pantry is open to all University of Michigan students, faculty, and staff who are experiencing food insecurity.</p>
@@ -52,7 +54,7 @@
         <img src="/images/WhereAreWeLocated.gif" alt="Where Are We Located"><figcaption>Maize and Blue Cupboard Location</figcaption>
     </figure>
 
-    <section>
+    <section class="content-three">
     <h2>Location</h2>
     <p>We are located in the basement of the Betsy Barbour Residence Hall. Please enter from Maynard street.</p>
         <p><strong>Address:</strong> 420 S State St Ann Arbor, MI 48109</p>
@@ -61,8 +63,10 @@
         </main>   
 
 <footer>
-    <p>Donate for a Good Cause: | <a href="https://mbc.studentlife.umich.edu/how-to-help/"> Donate Now </a></p>
-    <p>Student Life Services: | <a href="https://studentlife.umich.edu/"> Student life </a></p>
+    <p>University Contact Information:
+        Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
+       <p>Phone: (734) 764-1817</p>
+       <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
 </footer>
 </body>
 </html>
