--- a/cew.html
+++ b/cew.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/reset.css"> 
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Center For The Education of Women</title>
 </head>
 <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <a class="skip" href="#main-content">Skip to Main Content</a>
     <header>
         <img src="images/CEW+ logo.png" alt="CEW+ logo">
         <nav>
@@ -14,20 +16,21 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "firstgen.html">First-Generation Students</a></li>
                 <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
-                <li><a href = "cew.html">Center For The Education of Women</a></li>
+                <li class="active"><a href = "cew.html">Center For The Education of Women</a></li>
             </ul>
         </nav>
-        <h1>Center For The Education of Women</h1>
     </header>
-    <main id="main-content">
-        <section>
+
+    <h1>Center For The Education of Women</h1>
+
+    <main class="main" id="main-content">
+        <section class="content-one">
             <h2>Who is CEW+?</h2>
             <p>The Center for the Education of Women (CEW+) at the University of Michigan is a pioneering organizational hub dedicated to advancing the academic, professional, and personal aspirations of women and historically marginalized individuals within the university community. Established with a commitment to fostering equity, diversity, and inclusion, CEW+ offers a comprehensive range of support services, including individual counseling, financial aid through scholarships, and an array of educational workshops and events. As a beacon of empowerment and advocacy, CEW+ strives to create a more inclusive environment that enables all voices to be heard and valued.</p>
-        
         </section>
 
 
-        <section>
+        <section class="content-two">
              <h2> What We Do? </h2>
              <ul>
                 <li>
@@ -55,16 +58,17 @@
              </ul>
         </section>
 
-        <section>
+        <section class="content-three">
             <h2> How to Get Involved</h2>
             <img src="/images/UMSI_MSICampusTourOrientation_082422_10.jpg" alt="Group of people">
            <p>Join our team through a variety of professioanl and student positions, or our Social Work Internship Program.</p>
         </section>
     </main>
 <footer>
-<a href="http://eepurl.com/dv0vX5">Join Our Mailing List</a>
-<p>330 E. Liberty Street, Ann Arbor, MI 48104 </p>
-<p>(734) 764-6360</p>
+    <p>University Contact Information:
+        Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
+       <p>Phone: (734) 764-1817</p>
+       <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
 </footer> 
 </body>
 </html>
