--- a/firstgen.html
+++ b/firstgen.html
@@ -11,6 +11,7 @@
 <body>
     <a class="skip" href="#main-content">Skip to Main Content</a>
     <header>
+        <img src="images/resized-u-m_logo-hex-withoutline.png" alt="Michigan Logo"> 
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
