--- a/cew.html
+++ b/cew.html
@@ -34,16 +34,16 @@
              <h2> What We Do? </h2>
              <ul>
                 <li>
-                    <strong>Events + Workshop</strong>
+                    <h3>Events + Workshop</h3>
                 <p>CEW+ at the University of Michigan hosts a dynamic range of events and workshops designed to empower and support women and historically marginalized individuals throughout their academic and professional journeys. These offerings include professional development sessions on resume building, interview skills, and leadership training, as well as academic support workshops that cover writing techniques, research skills, and time management. Additionally, CEW+ addresses personal growth and wellness through sessions on work-life balance, stress management, and financial literacy. Here is our <a href="https://www.cew.umich.edu/events-workshops/">Events Calendar</a> so you don't miss out on future events.</p></li>
 
                 <li>
-                    <strong>Funding</strong>
+                    <h3>Funding</h3>
                 <p>At CEW+, we offer a variety of funding opportunities such as scholarships, emergency grants, sponsorships, fellowships and more!</p>
                 <a href="https://www.cew.umich.edu/funding/">Click here to view funding options and apply.</a></p>
                 </li>
 
-                <li><strong>Counseling</strong>
+                <li><h3>Counseling</h3>
                 <p> We provide career counseling and education counseling. Our comprehensive counseling program is tailored to support the unique needs of women and other historically marginalized populations within the university community. The center offers both individual and group counseling sessions, designed to assist clients with career and educational planning, work-life balance, and overcoming personal and professional obstacles. If interested, there are three ways to schedule an appointment:</p>
                 <ol>
                     <li>Fill out this <a href="https://app.smartsheet.com/b/form/338d8d3b3dbd4a9e9f2e5921084d401b">online form</a> and a member of our team will contact you via phone or email (your preference), to schedule your appointment within one business day.</li>
@@ -52,7 +52,7 @@
                 </ol>
             </li>
 
-                <li><strong>Advocacy Initiatives</strong>
+                <li><h3>Advocacy Initiatives</h3>
                 <p>CEW+ has a variety of initiatives, groups and lectures that make space for diverse voices. Some include CEW+ Scholar Community, Carol Hollenshead Inspire Award for Excellence in Promoting Equity and Social Change, Council for Nontraditional Students and CEW+ Research. Interested?<a href="https://www.cew.umich.edu/advocacy-initiatives/"> Click here for more information.</a></p>
             </li>
              </ul>
