--- a/cew.html
+++ b/cew.html
@@ -39,7 +39,7 @@
                 <li>
                     <h3>Funding</h3>
                 <p>At CEW+, we offer a variety of funding opportunities such as scholarships, emergency grants, sponsorships, fellowships and more!</p>
-                <a href="https://www.cew.umich.edu/funding/">Click here to view funding options and apply.</a></p>
+                <a href="https://www.cew.umich.edu/funding/">Click here to view funding options and apply.</a>
                 </li>
 
                 <li><h3>Counseling</h3>
