--- a/foodpantry.html
+++ b/foodpantry.html
@@ -25,7 +25,7 @@
         <h1>University of Michigan Food Pantry</h1>
             <p>The University of Michigan Food Pantry is dedicated to supporting students, faculty, and staff who are experiencing food insecurity. Our mission is to ensure that every member of the U-M community has access to nutritious food, essential supplies, and resources to help them thrive academically and personally.</p>
             <figure>
-                <img src="images/MCOMMONS-DSC03396.jpg" alt="Student Getting Food">
+                <img src="images/MCOMMONS-DSC03396.jpg" alt="A Student Getting Food">
         <figcaption>A student holding a dessert.</figcaption>
             </figure>
         <h2><strong>Supporting Our Community One Meal at a Time at the Maize & Blue Cupboard</strong></h2>
