--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Michigan</title>
 </head>
-<body>
+<body class="index-page">
     <a class="skip" href="#main-content">Skip to Main Content</a>
     <header>
         <img src="images/resized-u-m_logo-hex-withoutline.png" alt="Michigan Logo"> 
@@ -81,7 +81,7 @@
        <p>University Contact Information:
          Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
         <p>Phone: (734) 764-1817</p>
-        <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
+        <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
         </footer>
 </body>
 </html>
