--- a/firstgen.html
+++ b/firstgen.html
@@ -8,7 +8,7 @@
     <title>A Guide for First Gens Wolverines</title>
 </head>
 
-<body>
+<body class="first-gen-page">
     <a class="skip" href="#main-content">Skip to Main Content</a>
     <header>
         <img src="images/resized-u-m_logo-hex-withoutline.png" alt="Michigan Logo"> 
@@ -39,7 +39,6 @@
 
         <h3>Rashid S., Stamps School of Art & Design</h3>
         <p>You belong here. Ask questions. Make memories. Begin the start of your legacy!</p>
-        <!-- Story content created from personal experience and first-gen peers.  -->
     </section>
 
     <figure> 
@@ -60,7 +59,7 @@
     <section class="content-three">
         <h2>Join First-Gen for Weekly Events!</h2>
         <p> University of Michigan holds many weekly events for ALL first-gen students meant to connect with peers, gain valuable insights, and build a supportive community. These events will take place at a variety of times and in every corner of the campus so be sure to stay up to date with the calendar so you don't miss out!</p>
-        <a href="https://firstgen.umich.edu/events/#events">Event Calendar</a>
+        <a class="event-calendar" href="https://firstgen.umich.edu/events/#events">Event Calendar</a>
     </section>
     
     </main>
@@ -68,7 +67,7 @@
         <p>University Contact Information:
             Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
            <p>Phone: (734) 764-1817</p>
-           <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
+           <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
     </footer>    
 </body>
 </html>
