--- a/foodpantry.html
+++ b/foodpantry.html
@@ -67,7 +67,7 @@
     <p>University Contact Information:
         Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
        <p>Phone: (734) 764-1817</p>
-       <p><a href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
+       <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
 </footer>
 </body>
 </html>
