--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
                 <li><a href = "firstgen.html">First-Generation Students</a></li>
                 <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
                 <li><a href = "cew.html">Center For The Education of Women</a></li>
-                
+                <li><a href = "contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main" id="main-content">
+    <main id="main-content" class="main-content">
+        <section class="about-university">
         <h1>Welcome to the University of Michigan</h1>
         <p>Welcome to the University of Michigan! Discover what makes our university a place where people come to grow, learn, and lead the future.</p>
         <figure>
             <img src="images/UMSI_MichiganUnion_Reopening_18.jpg" alt="The University of Michigan Student Union">
             <figcaption>Welcome to the University of Michigan where everyone is welcomed!</figcaption>
         </figure>
-        <section class="content-one">
+        </section>
+
+        <section class="why-michigan">
             <h2>Who is the Maize & Blue?</h2>
             <p>The University of Michigan is a world-class institution renowned for its academic excellence, vibrant campus life, and cutting-edge research. Founded in 1817, U-M is dedicated to creating a diverse, inclusive, and transformative educational experience.</p>
             <h3><strong>Quick Facts:</strong></h3>
@@ -41,7 +44,7 @@
         </section>
 
 
-        <section class="content-two">
+        <section class="student-testimonial">
             <h2>Why Michigan?</h2>
             <article>
                 <h3>Academics</h3>
@@ -64,7 +67,7 @@
             <h3>— Alex, Class of '15</h3>
         </section>  
        
-        <section class="content-three">
+        <section class="campus-life">
             <h2>Life Outside the Classroom</h2>
             <p>There are many ways to take advantage of what this university has to offer. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside of academics:</p>
             <ul>
@@ -82,6 +85,8 @@
          Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
         <p>Phone: (734) 764-1817</p>
         <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
+        <p>© <span id="current-year">2024</span> University of Michigan. All rights reserved.</p>
         </footer>
+        <script> document.getElementById("current-year").innerHTML = new Date().getFullYear();</script>
 </body>
 </html>
