--- a/firstgen.html
+++ b/firstgen.html
@@ -18,18 +18,19 @@
                 <li class="active"><a href = "firstgen.html">First-Generation Students</a></li>
                 <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
                 <li><a href = "cew.html">Center For The Education of Women</a></li>
+                <li><a href = "contact.html">Contact</a></li>
             </ul>
         </nav>
  </header>
 
 
 
-<main class="main" id="main-content">
+<main id="main-content" class="main-content">
     <h1>A Guide for First Gen Wolverines</h1>
     <h2>Welcome First Generation Master's Students!</h2>
     <p>Welcome to the University of Michigan! Now that you've made it here, we hope you stay! As a first-generation Master's student, you're embarking on a transformative journey. You may face unique challenges and daunting experiences, but do not fret, you are not alone. There are many resources the University has to help navigate your time in grad school successfully.</p>
 
-    <section class="content-one">
+    <section class="first-gen-stories">
         <h2>First Gen Student Stories</h2>
         <h3>Tiana R., School of Literature, Science and the Arts</h3>
         <p>"Being a first-gen Master's student was extremely uncomfortable at first. So I started getting involved in a lot First-Gen events and quickly realized there are other people just like me. Getting invloved with the community and utilizing the resources provided made it easier to navigate my academic journey. Now, I don't feel so uncomfortable!" </p>
@@ -46,7 +47,7 @@
         <figcaption> Academic Success for Everyone!</figcaption>
     </figure>
             
-    <section class="content-two">
+    <section class="academic-success">
         <h2>Academic Success</h2>
         <p>There are many resources for first-gen students to ensure academic success.</p>
         <ul>
@@ -56,7 +57,7 @@
         </ul>
     </section>
 
-    <section class="content-three">
+    <section class="first-gen-events">
         <h2>Join First-Gen for Weekly Events!</h2>
         <p> University of Michigan holds many weekly events for ALL first-gen students meant to connect with peers, gain valuable insights, and build a supportive community. These events will take place at a variety of times and in every corner of the campus so be sure to stay up to date with the calendar so you don't miss out!</p>
         <a class="event-calendar" href="https://firstgen.umich.edu/events/#events">Event Calendar</a>
@@ -68,6 +69,8 @@
             Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
            <p>Phone: (734) 764-1817</p>
            <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
-    </footer>    
+           <p>© <span id="current-year">2024</span> University of Michigan. All rights reserved.</p>
+    </footer> 
+    <script> document.getElementById("current-year").innerHTML = new Date().getFullYear();</script>   
 </body>
 </html>
