--- a/foodpantry.html
+++ b/foodpantry.html
@@ -17,20 +17,23 @@
                 <li><a href = "firstgen.html">First-Generation Students</a></li>
                 <li class="active"><a href = "foodpantry.html">Student Food Cupboard</a></li>
                 <li><a href = "cew.html">Center For The Education of Women</a></li>
+                <li><a href = "contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main" id="main-content">
+    <main id="main-content" class="main-content">
+        <section class="color-wrap">
         <h1>University of Michigan Food Pantry</h1>
             <p>The University of Michigan Food Pantry is dedicated to supporting students, faculty, and staff who are experiencing food insecurity. Our mission is to ensure that every member of the U-M community has access to nutritious food, essential supplies, and resources to help them thrive academically and personally.</p>
             <figure>
                 <img src="images/MCOMMONS-DSC03396.jpg" alt="A Student Getting Food">
         <figcaption>A student holding a dessert.</figcaption>
             </figure>
-        <h2><strong>Supporting Our Community One Meal at a Time at the Maize & Blue Cupboard</strong></h2>
+        </section>
 
-        <section class="content-one">
+        <section class="how-cupboard-works">
+        <h2><strong>Supporting Our Community One Meal at a Time at the Maize & Blue Cupboard</strong></h2>
         <h2>Here's How It Works:</h2>
         <ol>
             <li><strong>Make an appointment:</strong> Shopping at the Maize and Blue Cupboard is by appointment only. You can <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">sign up</a> for a visit two weeks in advance.</li>
@@ -39,7 +42,7 @@
         </ol>
     </section>
 
-    <section class="content-two">
+    <section class="cupboard-faq">
         <h2>Frequently Asked Questions (FAQs)</h2>
         <h3>Who can use the food pantry?</h3>
         <p>The food pantry is open to all University of Michigan students, faculty, and staff who are experiencing food insecurity.</p>
@@ -55,7 +58,7 @@
         <img src="images/WhereAreWeLocated.gif" alt="Where Are We Located"><figcaption>Maize and Blue Cupboard Location</figcaption>
     </figure>
 
-    <section class="content-three">
+    <section class="cupboard-location">
     <h2>Location</h2>
     <p>We are located in the basement of the Betsy Barbour Residence Hall. Please enter from Maynard street.</p>
         <p><strong>Address:</strong> 420 S State St Ann Arbor, MI 48109</p>
@@ -68,6 +71,8 @@
         Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
        <p>Phone: (734) 764-1817</p>
        <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
+       <p>© <span id="current-year">2024</span> University of Michigan. All rights reserved.</p>
 </footer>
+<script> document.getElementById("current-year").innerHTML = new Date().getFullYear();</script>
 </body>
 </html>
