--- a/cew.html
+++ b/cew.html
@@ -17,24 +17,27 @@
                 <li><a href = "firstgen.html">First-Generation Students</a></li>
                 <li><a href = "foodpantry.html">Student Food Cupboard</a></li>
                 <li class="active"><a href = "cew.html">Center For The Education of Women</a></li>
+                <li><a href = "contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main" id="main-content">
+    <main id="main-content" class="cew-main">
         <h1>Center For The Education of Women</h1>
-        <section class="content-one">
+
+        <section class="about-cew">
             <h2>Who is CEW+?</h2>
             <p>The Center for the Education of Women (CEW+) at the University of Michigan is a pioneering organizational hub dedicated to advancing the academic, professional, and personal aspirations of women and historically marginalized individuals within the university community. Established with a commitment to fostering equity, diversity, and inclusion, CEW+ offers a comprehensive range of support services, including individual counseling, financial aid through scholarships, and an array of educational workshops and events. As a beacon of empowerment and advocacy, CEW+ strives to create a more inclusive environment that enables all voices to be heard and valued.</p>
         </section>
 
 
-        <section class="content-two">
+        <section class="cew-events">
              <h2> What We Do? </h2>
              <ul>
                 <li>
                     <h3>Events + Workshop</h3>
                 <p>CEW+ at the University of Michigan hosts a dynamic range of events and workshops designed to empower and support women and historically marginalized individuals throughout their academic and professional journeys. These offerings include professional development sessions on resume building, interview skills, and leadership training, as well as academic support workshops that cover writing techniques, research skills, and time management. Additionally, CEW+ addresses personal growth and wellness through sessions on work-life balance, stress management, and financial literacy. Here is our <a href="https://www.cew.umich.edu/events-workshops/">Events Calendar</a> so you don't miss out on future events.</p></li>
+                <li><a href = "contact.html">Contact</a></li>
 
                 <li>
                     <h3>Funding</h3>
@@ -57,17 +60,20 @@
              </ul>
         </section>
 
-        <section class="content-three">
+        <section class="cew-how-to">
             <h2> How to Get Involved</h2>
             <img src="images/UMSI_MSICampusTourOrientation_082422_10.jpg" alt="Group of people">
            <p>Join our team through a variety of professioanl and student positions, or our Social Work Internship Program.</p>
         </section>
     </main>
+
 <footer>
     <p>University Contact Information:
         Address: 500 S. State Street, Ann Arbor, MI 48109</p> 
        <p>Phone: (734) 764-1817</p>
        <p><a class="mailto" href="mailto:info@umich.edu">Email: info@umich.edu</a></p>
+       <p>© <span id="current-year">2024</span> University of Michigan. All rights reserved.</p>
 </footer> 
+<script> document.getElementById("current-year").innerHTML = new Date().getFullYear();</script>
 </body>
 </html>
